--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
-              <p><a href="./assets/NewestResume.pdf">Checkout My Resume</a></p>
+              <p><a href="./assets/BrianFord.docx">Checkout My Resume</a></p>
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
 									<li class="ftco-animate"><a href="https://twitter.com/BFordDev"><span
