--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Data Visualization</h4>
-                                <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss - ReactJS/D3</a>
+                                <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss -
+                                        ReactJS/D3</a>
                                 </h2>
                                 <p>Make or Miss is data visualization project based on the 2018-2019 NBA Season. For
                                     this project we have chosen to take a look at games that were decided by three
@@ -296,30 +297,29 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Text Based RPG</h4>
-                                <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">Text
+                                <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">
                                         ReactJS</a></h2>
-                                <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot Camp I attended at the University of Denver.</p>
+                                <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot
+                                    Camp I attended at the University of Denver.</p>
                                 <p><a href="https://github.com/KTurnage/Project3">View Github</a></p>
                             </div>
                         </div>
-                        <!-- <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="portfolio-single.html"
+                        <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                            <a href="https://peaceful-inlet-18025.herokuapp.com/"
                                 class="image order-2 d-flex justify-content-center align-items-center"
-                                style="background-image: url('images/work-6.jpg'); "
+                                style="background-image: url('images/weather.jpg'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
                                 <div class="icon d-flex text-center justify-content-center align-items-center">
                                     <span class="icon-search"></span>
                                 </div>
                             </a>
                             <div class="text order-1">
-                                <h4 class="subheading">Branding</h4>
-                                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has
-                                        no control</a></h2>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text.</p>
-                                <p><a href="#">View Project</a></p>
+                                <h4 class="subheading">Weather Finder</h4>
+                                <h2 class="heading"><a href="https://peaceful-inlet-18025.herokuapp.com/">ReactJS/Weather API</a></h2>
+                                <p>This is a Weather App using ReactJS and The OpenWeather API. Input City and Country to return various bits of Weather Data</p>
+                                <p><a href="https://github.com/bf2344/WeatherFinder">View Github</a></p>
                             </div>
-                        </div>  -->
+                        </div>
                     </div>
                 </div>
             </section>
