--- a/portfolio.html
+++ b/portfolio.html
@@ -171,6 +171,22 @@
                       <p><a href="https://github.com/KTurnage/Project3">View Github</a></p>
                   </div>
               </div>
+              <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                <a href="https://peaceful-inlet-18025.herokuapp.com/"
+                    class="image order-2 d-flex justify-content-center align-items-center"
+                    style="background-image: url('images/weather.jpg'); "
+                    data-scrollax=" properties: { translateY: '-30%'}">
+                    <div class="icon d-flex text-center justify-content-center align-items-center">
+                        <span class="icon-search"></span>
+                    </div>
+                </a>
+                <div class="text order-1">
+                    <h4 class="subheading">Weather Finder</h4>
+                    <h2 class="heading"><a href="https://peaceful-inlet-18025.herokuapp.com/">ReactJS/Weather API</a></h2>
+                    <p>This is a Weather App using ReactJS and The OpenWeather API. Input City and Country to return various bits of Weather Data</p>
+                    <p><a href="https://github.com/bf2344/WeatherFinder">View Github</a></p>
+                </div>
+            </div>
 	          </div>
 	        </div>
 	        <!-- <div class="row mt-5">
