--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                             <a href="https://bf2344.github.io/MyPortfolio"
                                 class="image order-2 d-flex justify-content-center align-items-center"
-                                style="background-image: url('images/portfoliopage.jpg'); "
+                                style="background-image: url('images/portfolio.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
                                 <div class="icon d-flex text-center justify-content-center align-items-center">
                                     <span class="icon-search"></span>
@@ -308,7 +308,7 @@
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                             <a href="https://peaceful-inlet-18025.herokuapp.com/"
                                 class="image order-2 d-flex justify-content-center align-items-center"
-                                style="background-image: url('images/weather.jpg'); "
+                                style="background-image: url('images/weather.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
                                 <div class="icon d-flex text-center justify-content-center align-items-center">
                                     <span class="icon-search"></span>
