--- a/index.html
+++ b/index.html
@@ -323,6 +323,26 @@
                                 <p><a href="https://github.com/bf2344/WeatherFinder">View Github</a></p>
                             </div>
                         </div>
+                        <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                            <a href="https://bf2344.github.io/Emailtemplate/"
+                                class="image d-flex justify-content-center align-items-center"
+                                style="background-image: url('images/email.png'); "
+                                data-scrollax=" properties: { translateY: '-30%'}">
+                                <div class="icon d-flex text-center justify-content-center align-items-center">
+                                    <span class="icon-search"></span>
+                                </div>
+                            </a>
+                            <div class="text">
+                                <h4 class="subheading">E-Mail Template</h4>
+                                <h2 class="heading"><a href="https://bf2344.github.io/Emailtemplate/">Our Vineyard -
+                                        HTML/CSS</a>
+                                </h2>
+                                <p>Our Vineyard is an E-Mail Template I created in order to reinforce skills learned about e-mail development. Includes embedded video as well as logos for the Faux Winery
+                                </p>
+                                <p><a href="https://github.com/bf2344/Emailtemplate">View Github</a></p>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
