--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
 
 
                                     <ul class="ftco-footer-social list-unstyled mt-4">
-                                        <li><a href="https://twitter.com/BFordDev"><span
+                                        <li><a target="_blank" href="https://twitter.com/BFordDev"><span
                                                     class="icon-twitter"></span></a></li>
-                                        <li><a href="www.linkedin.com/in/bf2344"><span class="icon-linkedin"></span></a>
+                                        <li><a target="_blank" href="https://www.linkedin.com/in/bf2344"><span class="icon-linkedin"></span></a>
                                         </li>
-                                        <li><a href="https://dribbble.com/BFordDev"><span
+                                        <li><a target="_blank" href="https://dribbble.com/BFordDev"><span
                                                     class="icon-dribbble"></span></a></li>
-                                        <li><a href="https://github.com/bf2344"><span class="icon-github"></span></a>
+                                        <li><a target="_blank" href="https://github.com/bf2344"><span class="icon-github"></span></a>
                                         </li>
                                     </ul>
                                     <h5>Contact me here!</h5>
@@ -396,13 +396,13 @@
 
                             <div class="ftco-footer-widget mb-5">
                                 <ul class="ftco-footer-social list-unstyled">
-                                    <li class="ftco-animate"><a href="https://twitter.com/BFordDev"><span
+                                    <li class="ftco-animate"><a target="_blank" href="https://twitter.com/BFordDev"><span
                                                 class="icon-twitter"></span></a></li>
-                                    <li class="ftco-animate"><a href="www.linkedin.com/in/bf2344"><span
+                                    <li class="ftco-animate"><a target="_blank" href="https://www.linkedin.com/in/bf2344"><span
                                                 class="icon-linkedin"></span></a></li>
-                                    <li class="ftco-animate"><a href="https://dribbble.com/BFordDev"><span
+                                    <li class="ftco-animate"><a target="_blank" href="https://dribbble.com/BFordDev"><span
                                                 class="icon-dribbble"></span></a></li>
-                                    <li class="ftco-animate"><a href="https://github.com/bf2344"><span
+                                    <li class="ftco-animate"><a target="_blank" href="https://github.com/bf2344"><span
                                                 class="icon-github"></span></a></li>
                                 </ul>
                             </div>
